--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -75,7 +75,13 @@
                     <td class="bio-label"><span class="label">XP:</span></td>
                     <td>
                         <input style="width:50%" id="xp" type="number" name="system.xp" value="{{ system.xp }}" />
-                        <div class="fakebutton leveledUp" {{#GreaterThan system.xp 1000}} data-leveledup {{/GreaterThan}} style="width:50%;float:right;{{#LesserThan system.xp 1000}}opacity:25%;{{/LesserThan}}"" >Level Up!</div>
+                        <div
+                          class="fakebutton leveledUp"
+                          {{#GreaterThan system.xp 1000}} data-leveledup {{/GreaterThan}}
+                          style="width:50%;float:right;{{#LesserThan system.xp 1000}}opacity:25%;{{/LesserThan}}"
+                        >
+                          Level Up!
+                        </div>
                     </td>
                   </tr>
                   <td>
@@ -155,7 +161,7 @@
                                 
                                 <input type="number"
                                        name="system.stamina.max"
-                                       value="{{ system.stamina.max }}"
+                                       value="{{ system.stamina.max }}" />
                             </td>
                         </tr>
                         <tr>
@@ -187,11 +193,15 @@
                           </td>
                         </tr>
                         <tr>
-                          <td><div class="fakebutton" data-recycle-ap title="Refresh AP During Combat">
+                          <td>
+                            <div class="fakebutton" data-recycle-ap title="Refresh AP During Combat">
                               <i class="fa-solid fa-recycle"></i>
+                            </div>
                           </td>
-                          <td><div class="fakebutton" data-refill-ap title="Refresh AP Outside of Combat">
+                          <td>
+                            <div class="fakebutton" data-refill-ap title="Refresh AP Outside of Combat">
                               <i class="fa-regular fa-arrow-up-right-dots"></i>
+                            </div>
                           </td>
                         </tr>
                         <tr>
@@ -264,41 +274,23 @@
         </form>
       </div>
     </header>
-    <table style="margin-top: -40px">
-      <tr>
-        <td colspan="999" class="karmaCap">
-          <input type="checkbox" name="system.karmaCapflipped" {{checked system.karmaCapflipped}} />
-          <input
-            type="checkbox"
-            name="system.karmaCapflipped2"
-            {{checked
-            system.karmaCapflipped2}}
-          />
-          <input
-            type="checkbox"
-            name="system.karmaCapflipped3"
-            {{checked
-            system.karmaCapflipped3}}
-          />
-          <input
-            type="checkbox"
-            name="system.karmaCapflipped4"
-            {{checked
-            system.karmaCapflipped4}}
-          /><input
-            type="checkbox"
-            name="system.karmaCapflipped5"
-            {{checked
-            system.karmaCapflipped5}}
-          /><input
-            type="checkbox"
-            name="system.karmaCapflipped6"
-            {{checked
-            system.karmaCapflipped6}}
-          />
-        </td>
-      </tr>
-    </table>
+    <div class="karmaCaps">
+      {{#each system.karmaCaps as |flipped key|}}
+        <input
+          type="checkbox"
+          name="system.karmaCaps.{{ key }}"
+          {{checked flipped}}
+        />
+      {{/each}}
+      <div class="addRemoveCaps">
+        <button type="button" {{#unless canAddCaps}}disabled{{/unless}} data-add-cap>
+          <i class="fas fa-plus-square"></i>
+        </button>
+        <button type="button" {{#unless canRemoveCaps}}disabled{{/unless}} data-remove-cap>
+          <i class="fas fa-minus-square"></i>
+        </button>
+      </div>
+    </div>
     {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
       {{!-- Default tab is specified in actor-sheet.mjs --}}
