move equipped armor to it's own template

--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -21,11 +21,12 @@
                             <div class="item flexrow"
                                  data-item-id="{{ item._id }}">
                                 <div class="item-controls">
-                                    <a data-edit
-                                       data-item-id="{{ item._id }}"
-                                       class="item-control allcaps"
-                                       title="{{localize 'DOCUMENT.Update' type='item'}}">
-                                        {{ item.name }}
+                                    <a
+                                      data-edit
+                                      data-item-id="{{ item._id }}"
+                                      class="item-control allcaps"
+                                      title="{{localize 'DOCUMENT.Update' type='item'}}">
+                                      {{ item.name }}
                                     </a>
                                     <a style="float: right; margin-right: 10px"
                                        class="item-control item-delete"
