--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -5,40 +5,38 @@
 </style>
 <table class="status-block">
   <tr>
-    <td class="skill-table">
-       Points to Spend:{{system.skillPool}}
-      <table>
-        <tr>
-          {{#each system.skills as |skill key|}}
-        </tr>
+      <td class="skill-table">
+          Points: {{#Sum system.startingSkillpoints system.skillPool}}{{/Sum}}
+          <table>
+              <tr>
+                  {{#each system.skills as |skill key|}}
+              </tr>
 
-        <tr>
-          <td>
-            {{#each skill.ability as |abilityKey|}}
+              <tr>
+                  <td>
+                      {{#each skill.ability as |abilityKey|}}
 
-            <p class="specialroll">
-              <label
-                for="{{ abilityKey }}"
-                class="resource-label rollable"
-                data-rollable
-                data-roll="d20+{{skill.value}}+{{#with (lookup ../../system.abilities [abilityKey])}} {{mod}} {{/with}}-{{../../system.penaltyTotal}}+@luckmod"
-                data-label="Performed a {{skill.label}} roll using {{#with (lookup ../../system.abilities [abilityKey])}}{{label}} {{/with}}"
-              >
-                {{ abilityKey }}
-              </label>
-            </p>
-            {{/each}}
-          </td>
-          <td class="skill-label" title="Modifiers: {{skill.modifiers}}">{{ skill.label }}</td>
-          <td class="skill-value">
-              <i style="padding:3px;" data-skillsubtraction data-skill="{{skill.id}}" class="fas fa-minus-square"></i> 
-              {{ skill.value }} 
-              <i style="padding:3px;"  data-skilladdition data-skill="{{skill.id}}" class="fas fa-plus-square"></i>
-</td>
-        </tr>
-        {{/each}}
-      </table>
-    </td>
+                      <p class="specialroll">
+                          <label for="{{ abilityKey }}"
+                                 class="resource-label rollable"
+                                 data-rollable
+                                 data-roll="d20+{{skill.value}}+{{#with (lookup ../../system.abilities [abilityKey])}} {{mod}} {{/with}}-{{../../system.penaltyTotal}}+@luckmod"
+                                 data-label="Performed a {{skill.label}} roll using {{#with (lookup ../../system.abilities [abilityKey])}}{{label}} {{/with}}">
+                              {{ abilityKey }}
+                          </label>
+                      </p>
+                      {{/each}}
+                  </td>
+                  <td class="skill-label" title="Base: {{skill.base}} Modifier: {{skill.modifiers}}">{{ skill.label }}</td>
+                  <td class="skill-value">
+                      <i style="padding:3px;" data-skillsubtraction data-skill="{{skill.id}}" class="fas fa-minus-square"></i>
+                      {{#Sum skill.modifiers skill.base}}{{/Sum}}
+                      <i style="padding:3px;" {{#GreaterThan ../system.skillPool 1}} data-skilladdition {{/GreaterThan}} data-skill="{{skill.id}}" class="fas fa-plus-square"></i>
+                  </td>
+              </tr>
+              {{/each}}
+          </table>
+      </td>
     <td class="status-table">
         <br />
       <table>
