--- a/templates/actor/parts/actor-medicines.hbs
+++ b/templates/actor/parts/actor-medicines.hbs
@@ -1,5 +1,5 @@
 {{#each medicines as |item id|}}
-<div style="width: 33%; float: left">
+<div class="box-medicines">
     <li class="item flexrow" data-item-id="{{ item._id }}">
         <table class="perk-table" style="border: solid 1px">
             <tr>
