--- a/templates/actor/parts/actor-perks.hbs
+++ b/templates/actor/parts/actor-perks.hbs
@@ -1,5 +1,5 @@
 {{#each traits as |item id|}}
-<div style="width: 33%; float: left;min-height:265px;">
+<div class="box-traits">
     <li class="item flexrow" data-item-id="{{ item._id }}">
         <table class="perk-table" style="border: solid 1px">
             <tr>
@@ -32,7 +32,7 @@
 {{/each}}
 
 {{#each perks as |item id|}}
-<div style="width: 33%; float: left;min-height:265px;>
+<div class="box-perks">
     <li class="item flexrow" data-item-id="{{ item._id }}">
         <table class="perk-table" style="border: solid 1px">
             <tr>
