--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -20,7 +20,7 @@
                           <label for="{{ abilityKey }}"
                                  class="resource-label rollable"
                                  data-rollable
-                                 data-roll="d20+{{skill.value}}+{{#with (lookup ../../system.abilities [abilityKey])}} {{mod}} {{/with}}-{{../../system.penaltyTotal}}+@luckmod"
+                                 data-roll="d20+{{#Sum skill.base skill.modifiers}}{{/Sum}}+{{#with (lookup ../../system.abilities [abilityKey])}} {{mod}} {{/with}}-{{../../system.penaltyTotal}}+@luckmod"
                                  data-label="Performed a {{skill.label}} roll using {{#with (lookup ../../system.abilities [abilityKey])}}{{label}} {{/with}}">
                               {{ abilityKey }}
                           </label>
