--- a/templates/actor/heading/karmaCaps.hbs
+++ b/templates/actor/heading/karmaCaps.hbs
@@ -6,7 +6,7 @@
         <i class="fas fa-minus-square"></i>
     </button>
 </div>
-{{#each system.karmaCaps as |flipped key|}}
+{{#each karmaCaps as |flipped key|}}
 <input
     type="checkbox"
     name="system.karmaCaps.{{ key }}"
