--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -5,40 +5,18 @@
 </style>
 <table class="status-block">
   <tr>
-      <td class="skill-table">
-          Points: {{#Sum system.startingSkillpoints system.skillPool}}{{/Sum}}
-          <table>
-              <tr>
-                  {{#each system.skills as |skill key|}}
-              </tr>
-
-              <tr>
-                  <td>
-                      {{#each skill.ability as |abilityKey|}}
-
-                      <p class="specialroll">
-                          <label for="{{ abilityKey }}"
-                                 class="resource-label rollable"
-                                 data-rollable
-                                 data-roll="d20+{{#Sum skill.base skill.modifiers}}{{/Sum}}+{{#with (lookup ../../system.abilities [abilityKey])}} {{mod}} {{/with}}-{{../../system.penaltyTotal}}+@luckmod"
-                                 data-label="Performed a {{skill.label}} roll using {{#with (lookup ../../system.abilities [abilityKey])}}{{label}} {{/with}}">
-                              {{ abilityKey }}
-                          </label>
-                      </p>
-                      {{/each}}
-                  </td>
-                  <td class="skill-label" title="Base: {{skill.base}} Modifier: {{skill.modifiers}}">{{ skill.label }}</td>
-                  <td class="skill-value">
-                      <i style="padding:3px;" data-skillsubtraction data-skill="{{skill.id}}" class="fas fa-minus-square fakebutton nobackground"></i>
-                      {{#Sum skill.modifiers skill.base}}{{/Sum}}
-                      <i style="padding:3px;" data-skilladdition data-skill="{{skill.id}}" class="fas fa-plus-square fakebutton nobackground"></i>
-                  </td>
-              </tr>
-              {{/each}}
-          </table>
-      </td>
+    <td class="skill-table">
+      {{>
+          "systems/arcane-arcade-fallout/templates/actor/status/skills.hbs"
+          startingSkillpoints=system.startingSkillpoints
+          skillPool=system.skillPool
+          skills=system.skills
+          abilities=system.abilities
+          penaltyTotal=system.penaltyTotal
+      }}
+    </td>
     <td class="status-table">
-        <br />
+      <br />
       <table>
         <tr>
           <td class="status-info-label">Hunger Lvl</td>
@@ -55,7 +33,7 @@
           </td>
           <td class="status-info-label">Radiation</td>
         </tr>
-        <tr >
+        <tr>
           <td class="status-info-value">
             <input
               type="number"
@@ -89,28 +67,35 @@
             />
           </td>
           <td class="status-info-value">
-		  <table>
-		  <tr><td>Lvl</td><td>Rads</td></tr>
-		  
-		  <tr><td>
-            <input 
-			  style="width:25px;"
-              type="number"
-              name="system.penalties.radiation.value"
-              value="{{ system.penalties.radiation.value }}"
-              min="0"
-            />
-			</td><td>
-            <input
-              type="number"
-			  style="width:25px;"
-              name="system.irradiated"
-              value="{{ system.irradiated }}"
-              min="0"
-			  max="10"
-			  title="For when you get Irradiated: at 10, reset to 0 and add 1 to Rad Lvl"
-            />
-			</td></tr></table>
+            <table>
+              <tr>
+                <td>Lvl</td>
+                <td>Rads</td>
+              </tr>
+
+              <tr>
+                <td>
+                  <input
+                    style="width: 25px"
+                    type="number"
+                    name="system.penalties.radiation.value"
+                    value="{{ system.penalties.radiation.value }}"
+                    min="0"
+                  />
+                </td>
+                <td>
+                  <input
+                    type="number"
+                    style="width: 25px"
+                    name="system.irradiated"
+                    value="{{ system.irradiated }}"
+                    min="0"
+                    max="10"
+                    title="For when you get Irradiated: at 10, reset to 0 and add 1 to Rad Lvl"
+                  />
+                </td>
+              </tr>
+            </table>
           </td>
         </tr>
       </table>
@@ -118,11 +103,15 @@
       <table>
         <tr>
           <td>Healing Rate</td>
-          <td class="resource-label rollable"
+          <td
+            class="resource-label rollable"
             data-rollable
             data-roll="d20+@combatSequence+@penaltyTotal+@luckmod"
-            data-label="Performed a Combat Sequence roll!<br> D20 + Combat Sequence - Penalties + Luck Mod / 2">Combat Sequence</td>
-           <td>Fatigue</td>
+            data-label="Performed a Combat Sequence roll!<br> D20 + Combat Sequence - Penalties + Luck Mod / 2"
+          >
+            Combat Sequence
+          </td>
+          <td>Fatigue</td>
         </tr>
         <tr>
           <td>
@@ -157,7 +146,7 @@
           </td>
         </tr>
         <tr>
-          <td colspan="999" >Total Penalties: {{ system.penaltyTotal }}</td>
+          <td colspan="999">Total Penalties: {{ system.penaltyTotal }}</td>
         </tr>
       </table>
     </td>
