--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -17,88 +17,13 @@
     </td>
     <td class="status-table">
       <br />
-      <table>
-        <tr>
-          <td class="status-info-label">Hunger Lvl</td>
-          <td class="status-info-label">Dehydration Lvl</td>
-          <td class="status-info-label">Exhaustion Lvl</td>
-          <td class="status-info-label">
-            <span
-              class="rollable"
-              data-rollable
-              data-roll="d20-{{ penaltyTotal }}"
-              data-label="Radiation DC Check: Roll over {{ system.radDC.value }} to succeed"
-              >Radiation DC</span
-            >
-          </td>
-          <td class="status-info-label">Radiation</td>
-        </tr>
-        <tr>
-          <td class="status-info-value">
-            <input
-              type="number"
-              name="system.penalties.hunger.value"
-              value="{{ system.penalties.hunger.value }}"
-              min="0"
-            />
-          </td>
-          <td class="status-info-value">
-            <input
-              type="number"
-              name="system.penalties.dehydration.value"
-              value="{{ system.penalties.dehydration.value }}"
-              min="0"
-            />
-          </td>
-          <td class="status-info-value">
-            <input
-              type="number"
-              name="system.penalties.exhaustion.value"
-              value="{{ system.penalties.exhaustion.value }}"
-              min="0"
-            />
-          </td>
-          <td class="status-info-value">
-            <input
-              type="number"
-              name="system.penalties.radDC.value"
-              value="{{ system.penalties.radDC.value }}"
-              min="0"
-            />
-          </td>
-          <td class="status-info-value">
-            <table>
-              <tr>
-                <td>Lvl</td>
-                <td>Rads</td>
-              </tr>
-
-              <tr>
-                <td>
-                  <input
-                    style="width: 25px"
-                    type="number"
-                    name="system.penalties.radiation.value"
-                    value="{{ system.penalties.radiation.value }}"
-                    min="0"
-                  />
-                </td>
-                <td>
-                  <input
-                    type="number"
-                    style="width: 25px"
-                    name="system.irradiated"
-                    value="{{ system.irradiated }}"
-                    min="0"
-                    max="10"
-                    title="For when you get Irradiated: at 10, reset to 0 and add 1 to Rad Lvl"
-                  />
-                </td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
+      {{>
+          "systems/arcane-arcade-fallout/templates/actor/status/penalties.hbs"
+          penalties=system.penalties
+          penaltyTotal=system.penaltyTotal
+          radDC=system.radDC
+          irradiated=system.irradiated
+      }}
       <br />
       <table>
         <tr>
