--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -67,7 +67,42 @@
             "systems/arcane-arcade-fallout/templates/actor/status/special.hbs"
             abilities=system.abilities
           }}
-          {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-status.hbs"}}
+          <table class="status-block">
+            <tr>
+              <td class="skill-table">
+                {{>
+                    "systems/arcane-arcade-fallout/templates/actor/status/skills.hbs"
+                    startingSkillpoints=system.startingSkillpoints
+                    skillPool=system.skillPool
+                    skills=system.skills
+                    abilities=system.abilities
+                    penaltyTotal=system.penaltyTotal
+                }}
+              </td>
+              <td class="status-table">
+                <br />
+                {{>
+                    "systems/arcane-arcade-fallout/templates/actor/status/penalties.hbs"
+                    penalties=system.penalties
+                    penaltyTotal=system.penaltyTotal
+                    radDC=system.radDC
+                    irradiated=system.irradiated
+                }}
+                <br />
+                {{>
+                    "systems/arcane-arcade-fallout/templates/actor/status/passives.hbs"
+                    healingRate=system.healingRate
+                    combatSequence=system.combatSequence
+                    fatigue=system.penalties.fatigue
+                    passiveSense=system.passiveSense
+                    partyNerve=system.partyNerve
+                    groupSneak=system.groupSneak
+                    properties=system.properties
+                    penaltyTotal=system.penaltyTotal
+                }}
+              </td>
+            </tr>
+          </table>
         </section>
       </div>
 
