--- a/templates/actor/items/equipped-armor.hbs
+++ b/templates/actor/items/equipped-armor.hbs
@@ -1,4 +1,4 @@
-<td class="armorbox">
+<td class="armorbox"><h3>Armor</h3>
     <!-- Armor Slot -->
     {{#each armors as |item id|}}
         {{#if item.system.itemEquipped}}
