--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -26,7 +26,7 @@ details > summary {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #222;
+  background: #002a08;
   cursor: pointer;
   border: solid 1px #ccc;
 }
@@ -785,6 +785,11 @@ form td .status-notes li:hover {
 }
 .armorbox {
   width: 50%;
+}
+.sheet table td .ammo-box{
+    background-image:url('/systems/arcane-arcade-fallout/assets/opacity-25.png');
+    margin-top:15px;
+    margin:5px;
 }
 
 .dialog .conditioninfo {
